change image text

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
       <!-- <div class="celebrities"> -->
         <div class="david">
           <h2>You Got David Beckham</h2>
-          <img src="img/david.jpg" alt="becks"/>
+          <img src="img/David.jpg" alt="becks"/>
         </div>
         <div class="danny">
           <h2>You Got Danny DeVito</h2>
-          <img src="img/danny.jpg" alt="danny"/>
+          <img src="img/Danny.jpg" alt="danny"/>
         </div>
         <div class="will">
           <h2>You Got Will Ferrell</h2>
-          <img src="img/will.jpg" alt="will"/>
+          <img src="img/Will.jpg" alt="will"/>
         </div>
         <div class="jennifer">
           <h2>You Got Jennifer Aniston</h2>
-          <img src="img/jennifer.jpg" alt="jennifer"/>
+          <img src="img/Jennifer.jpg" alt="jennifer"/>
         </div>
         <div class="betty">
           <h2>You Got Betty White</h2>
-          <img src="img/betty.jpg" alt="betty"/>
+          <img src="img/Betty.jpg" alt="betty"/>
         </div>
         <div class="melissa">
           <h2>You Got Melissa McCarthy</h2>
